<resources>
    <string name="app_name">Simple EMI Calculator</string>
    <string name="hint_principal">Principal Amount $</string>
    <string name="hint_interest">Interest rate per Year %</string>
    <string name="hint_years">How Many Years</string>
    <string name="hint_emi">EMI $</string>
    <string name="hint_interest_total">Total Interest for Loan $</string>
    <!-- The class name to the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
