<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="net.kuras_sea.simpleemicalculator.MainActivity"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_principal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/principal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                    android:digits="0123456789."
                    android:hint="@string/hint_principal" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/interest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                    android:digits="0123456789."
                    android:hint="@string/hint_interest" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_tenure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/years"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:digits="0123456789."
                    android:hint="@string/hint_years" />
            </android.support.design.widget.TextInputLayout>


            <Button android:id="@+id/btn_calculate2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Calculate"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                tools:ignore="HardcodedText" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_emi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/emi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxEms="0"
                    android:inputType="number"
                    android:hint="@string/hint_emi" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_total_Interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/interest_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="number"
                    android:hint="@string/hint_interest_total" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
